# cryptopoker

./: .gitignore  LICENSE  Makefile
backend/: Cargo.toml
backend/src/: poker.rs
client/: package.json  tsconfig.json  webpack.config.js
client/src/: index.html  index.tsx
client/src/components/: App.tsx  Header.tsx
client/src/components/body/: Body.tsx
client/src/components/footer/: Footer.tsx
client/src/components/header/: Header.tsx  HeaderButton.tsx
client/src/components/svg/: BaseSvg.tsx  HomeSvg.tsx
client/src/scss/: index.scss  index.scss.d.ts
client/src/typings/: declarations.d.ts
doc/: main.MD
