[package]
name = "cryptopoker"
version = "0.1.0"
authors = ["vany <ivan@serezhkin.com>"]
edition="2018"

[lib]
name = "cryptopoker"
path = "src/poker.rs"
crate-type = ["cdylib"]

[dependencies]
fluence = {version = "0.1.4",features = ["wasm_logger"]}
serde = { version = "1.0.90",features = ["derive"] }
serde_json = { version = "1.0.39"}
log = {version ="0.4.6" }
